unpackaged/main/default/objects/TECHProduit__c/TECHProduit__c.object-meta.xml
<CustomObject>
    <label>TECH Produit</label>
    <nameField>
        <displayFormat>GF-TECHProd-{0000000000}</displayFormat>
        <label>Nom de TECHProduit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TECH Produits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>