unpackaged/main/default/objects/TECHProduit__c/fields/CarnetCommande__c.field-meta.xml
<CustomField>
    <fullName>CarnetCommande__c</fullName>
    <label>Carnet de commande</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>