unpackaged/main/default/objects/TECHProduit__c/fields/DateDeModification__c.field-meta.xml
<CustomField>
    <fullName>DateDeModification__c</fullName>
    <label>Date de modification</label>
    <type>DateTime</type>
</CustomField>