unpackaged/main/default/objects/TECHProduit__c/fields/DureeContrat__c.field-meta.xml
<CustomField>
    <fullName>DureeContrat__c</fullName>
    <label>Durée du contrat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>