unpackaged/main/default/objects/TECHProduit__c/fields/Famille__c.field-meta.xml
<CustomField>
    <fullName>Famille__c</fullName>
    <label>Type de produit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrosseries</fullName>
            </value>
            <value>
                <fullName>Containers</fullName>
            </value>
            <value>
                <fullName>Meubles</fullName>
            </value>
            <value>
                <fullName>Véhicules Frigorifiques</fullName>
            </value>
            <value>
                <fullName>Véhicules Secs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>