unpackaged/main/default/objects/TECHProduit__c/fields/LoyerMensuel__c.field-meta.xml
<CustomField>
    <fullName>LoyerMensuel__c</fullName>
    <label>Loyer mensuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>