unpackaged/main/default/objects/TECHProduit__c/fields/OpportuniteId__c.field-meta.xml
<CustomField>
    <fullName>OpportuniteId__c</fullName>
    <label>Opportunite Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>