unpackaged/main/default/objects/TECHProduit__c/fields/ProduitId__c.field-meta.xml
<CustomField>
    <fullName>ProduitId__c</fullName>
    <label>Produit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>