unpackaged/main/default/objects/TECHProduit__c/fields/SousCategorie__c.field-meta.xml
<CustomField>
    <fullName>SousCategorie__c</fullName>
    <label>Sous-catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V1M</fullName>
            </value>
            <value>
                <fullName>V3M</fullName>
            </value>
            <value>
                <fullName>V3X</fullName>
            </value>
            <value>
                <fullName>V3E</fullName>
            </value>
            <value>
                <fullName>V3P</fullName>
            </value>
            <value>
                <fullName>V3I</fullName>
            </value>
            <value>
                <fullName>V3S</fullName>
            </value>
            <value>
                <fullName>V5M</fullName>
            </value>
            <value>
                <fullName>V5X</fullName>
            </value>
            <value>
                <fullName>V5E</fullName>
            </value>
            <value>
                <fullName>V5P</fullName>
            </value>
            <value>
                <fullName>V5I</fullName>
            </value>
            <value>
                <fullName>V5S</fullName>
            </value>
            <value>
                <fullName>V9M</fullName>
            </value>
            <value>
                <fullName>V9MH</fullName>
            </value>
            <value>
                <fullName>V9X</fullName>
            </value>
            <value>
                <fullName>V9XH</fullName>
            </value>
            <value>
                <fullName>V9E</fullName>
            </value>
            <value>
                <fullName>V9P</fullName>
            </value>
            <value>
                <fullName>V9I</fullName>
            </value>
            <value>
                <fullName>V9IH</fullName>
            </value>
            <value>
                <fullName>V9S</fullName>
            </value>
            <value>
                <fullName>V11M</fullName>
            </value>
            <value>
                <fullName>V11MH</fullName>
            </value>
            <value>
                <fullName>V11X</fullName>
            </value>
            <value>
                <fullName>V11XH</fullName>
            </value>
            <value>
                <fullName>V11E</fullName>
            </value>
            <value>
                <fullName>V11P</fullName>
            </value>
            <value>
                <fullName>V11PH</fullName>
            </value>
            <value>
                <fullName>V11I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>