unpackaged/main/default/objects/TECHProduit__c/fields/SousFamille__c.field-meta.xml
<CustomField>
    <fullName>SousFamille__c</fullName>
    <label>Sous-famille</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>V (Frigo)</fullName>
            </value>
            <value>
                <fullName>P (Frigo)</fullName>
            </value>
            <value>
                <fullName>S (Frigo)</fullName>
            </value>
            <value>
                <fullName>T (Frigo)</fullName>
            </value>
            <value>
                <fullName>V (Sec)</fullName>
            </value>
            <value>
                <fullName>P (Sec)</fullName>
            </value>
            <value>
                <fullName>T (Sec)</fullName>
            </value>
            <value>
                <fullName>N/A (Containers)</fullName>
            </value>
            <value>
                <fullName>BAC</fullName>
            </value>
            <value>
                <fullName>VITRINE</fullName>
            </value>
            <value>
                <fullName>AUTRE</fullName>
            </value>
            <value>
                <fullName>N/A (Carrosseries)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>