unpackaged/main/default/objects/TECHProduit__c/fields/Supprime__c.field-meta.xml
<CustomField>
    <fullName>Supprime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supprimé</label>
    <type>Checkbox</type>
</CustomField>