unpackaged/main/default/objects/TECHProduit__c/fields/TypeActivite__c.field-meta.xml
<CustomField>
    <fullName>TypeActivite__c</fullName>
    <label>Type d&#39;activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>